update note 4/27/2026
-Modify User and Dashboard management and move outside privacy and security
-Remove hardcoded text